<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:digicorp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    card_view:cardElevation="0dp"
    card_view:cardMaxElevation="0dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
            android:id="@+id/order_dialog_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginTop="10dp"
            android:text="Date"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            digicorp:asset_font_file_name="@string/roboto_regular" />

        <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
            android:id="@+id/order_dialog_txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:text="time"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/sp_16"
            digicorp:asset_font_file_name="@string/roboto_regular" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_15">


            <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.Button
                android:id="@+id/order_dialog_txt_edit_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_weight="1"
                android:background="@drawable/red_button"
                android:gravity="center"
                android:text="@string/edit_order"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_16"
                digicorp:asset_font_file_name="@string/roboto_regular" />

            <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.Button
                android:id="@+id/order_dialog_txt_send_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_weight="1"
                android:background="@drawable/red_button"
                android:gravity="center"
                android:text="@string/send_order"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_16"
                digicorp:asset_font_file_name="@string/roboto_regular" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>