<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:digicorp="http://schemas.android.com/tools"
    android:id="@+id/main_card_wallets"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    card_view:cardBackgroundColor="#fff"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
                        android:id="@+id/raw_order_txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Roll"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18"
                        digicorp:asset_font_file_name="@string/roboto_regular" />

                    <CheckBox
                        android:id="@+id/raw_order_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />
                </LinearLayout>

                <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
                    android:id="@+id/raw_order_txt_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="Ingredientes"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/sp_16"
                    digicorp:asset_font_file_name="@string/roboto_light" />

                <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
                    android:id="@+id/raw_order_txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="28.36"
                    android:textColor="@color/dark_red"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/raw_order_lnr_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical"
                    android:visibility="gone">


                    <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
                        android:id="@+id/raw_order_txt_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="Cant:1"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/sp_16"
                        digicorp:asset_font_file_name="@string/roboto_regular" />

                    <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
                        android:id="@+id/raw_order_txt_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="Extra 1, Extra 2"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/sp_16"
                        digicorp:asset_font_file_name="@string/roboto_regular" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/raw_order_lnr_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
                        android:id="@+id/raw_order_txt_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="Note"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/sp_16"
                        digicorp:asset_font_file_name="@string/roboto_regular" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <ms.cloudtea.viewpagermultiplefragmentdemo.app.view.TextView
            android:id="@+id/raw_order_btn_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:padding="@dimen/dp_7"
            android:text="@string/agree"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            digicorp:asset_font_file_name="@string/roboto_regular" />
    </LinearLayout>

</android.support.v7.widget.CardView>